--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:prod:app": "node ./scripts/build.mjs",
     "build:prod:css": "tailwindcss build --minify ./src/css/index.css -o ./src/style.css",
     "build:dev": "run-p build:dev:*",
-    "build:dev:css": "tailwindcss build --minify ./src/css/index.css -o ./src/style.css",
+    "build:dev:css": "tailwindcss build --watch ./src/css/index.css -o ./src/style.css",
     "build:dev:app": "node ./scripts/build.mjs --watch"
   },
   "devDependencies": {
@@ -16,12 +16,14 @@
     "@types/ramda": "^0.28.21",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "chroma-js": "^2.4.2",
     "esbuild": "^0.17.2",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "ramda": "^0.28.0",
     "ramda-adjunct": "^3.4.0",
     "react": "^18.2.0",
