--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/ramda": "^0.28.21",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/react-icons": "^3.0.0",
+    "@types/react-router-dom": "^5.3.3",
     "chroma-js": "^2.4.2",
     "esbuild": "^0.17.2",
     "npm-run-all": "^4.1.5",
@@ -27,6 +29,8 @@
     "ramda": "^0.28.0",
     "ramda-adjunct": "^3.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.6.2"
   }
 }
