--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@chialab/esbuild-plugin-html": "^0.17.2",
+    "@types/bluebird": "^3.5.38",
     "@types/ramda": "^0.28.21",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
@@ -25,6 +26,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "bluebird": "^3.7.2",
     "classnames": "^2.3.2",
     "ramda": "^0.28.0",
     "ramda-adjunct": "^3.4.0",
